# underpeel-bot

./: .gitignore  Dockerfile  README.md  bot.py  compose-dev.yaml  compose.yaml  config.example.toml  config.py  flake.nix  pyproject.toml  secrets.example.toml
cogs/: command_error_handler.py  currency.py  predictions.py  robomoji.py  sync.py
cogs/underpeel/: __init__.py  link.py  peelo.py
database/: __init__.py  currency.py  models.py  predictions.py  robomoji.py  robomoji_db.py  underpeel.py  valorant.py
models/: bot.py  peelo.py  prediction.py  robomoji.py  underpeel.py  valorant.py
scripts/: clear_season_roles.py
tests/: test_peelo.py
views/: prediction.py
