[tool.poetry]
name = "underpeel-bot"
version = "0.1.0"
description = ""
authors = ["chezbgone <chezbgone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.4.0"
boto3 = "^1.35.86"
aiohttp = "^3.11.11"
pydantic = "^2.10.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
boto3-stubs = {extras = ["dynamodb"], version = "^1.35.56"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
